# gosh

./: .gitignore  .travis.yml  Go.cabal  LICENSE  Makefile  README.md  go.cabal  stack.yaml
spec/: Spec.hs
src/: ColorCodes.hs  Colors.hs  Go.hs  Main.hs  go.hs  main.hs
src/Go/UI/: Color.hs
