name:                go
version:             0.0.1
description:         The game of Go for the command line
homepage:            https://github.com/tsujigiri/gosh
license:             MIT
license-file:        LICENSE
author:              Helge Rausch <helge@rausch.io>
copyright:           2015 Helge Rausch <helge@rausch.io>
category:            Game
build-type:          Simple
extra-source-files:  README, README.md
cabal-version:       >=1.10

executable go
  main-is:             Main.hs
  default-language:    Haskell2010
  hs-source-dirs:      src
  build-depends:       base >=4.6 && <4.8,
                       containers >=0.5 && <0.6
library
  exposed-modules:     Go, Go.UI.Color, ColorCodes
  default-language:    Haskell2010
  hs-source-dirs:      src
  build-depends:       base >=4.6 && <4.8,
                       containers >=0.5 && <0.6
test-suite tests
  ghc-options:         -Wall
  default-extensions:  OverloadedStrings
  type:                exitcode-stdio-1.0
  hs-source-dirs:      spec
  main-is:             Spec.hs
  build-depends:       base,
                       containers >=0.5 && <0.6,
                       go,
                       hspec >=2.1 && <2.2
  default-language:    Haskell2010
